--- a/GoingOn/packages/repositories.config
+++ b/GoingOn/packages/repositories.config
@@ -3,5 +3,6 @@
   <repository path="..\EndToEndTests\packages.config" />
   <repository path="..\Frontend.Tests\packages.config" />
   <repository path="..\Frontend\packages.config" />
+  <repository path="..\Storage.Tests\packages.config" />
   <repository path="..\Storage\packages.config" />
 </repositories>
