--- a/GoingOn/Storage/Storage.csproj
+++ b/GoingOn/Storage/Storage.csproj
@@ -53,6 +53,7 @@
     <Compile Include="MemoryStorage\UserMemoryStorage.cs" />
     <Compile Include="StorageException.cs" />
     <Compile Include="TableStorage\Entities\NewsEntity.cs" />
+    <Compile Include="TableStorage\NewsEntityEqualityComparer.cs" />
     <Compile Include="TableStorage\NewsTableStorage.cs" />
     <Compile Include="TableStorage\Entities\UserEntity.cs" />
     <Compile Include="TableStorage\UserTableStorage.cs" />
@@ -96,6 +97,7 @@
       <HintPath>..\packages\System.Spatial.5.6.2\lib\net40\System.Spatial.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets" Condition="Exists('..\packages\StyleCop.MSBuild.4.7.49.0\build\StyleCop.MSBuild.Targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
