--- a/GoingOn/Frontend/Frontend.csproj
+++ b/GoingOn/Frontend/Frontend.csproj
@@ -170,6 +170,9 @@
     <Compile Include="Authentication\BasicAuthenticationAttribute.cs" />
     <Compile Include="Authentication\HttpAuthenticationChallengeContextExtensions.cs" />
     <Compile Include="Authentication\IdentityBasicAuthenticationAttribute.cs" />
+    <Compile Include="Common\BusinessValidationException.cs" />
+    <Compile Include="Common\InputValidationException.cs" />
+    <Compile Include="Controllers\INewsController.cs" />
     <Compile Include="Entities\NewsREST.cs" />
     <Compile Include="Entities\UserREST.cs" />
     <Compile Include="Global.asax.cs">
