--- a/GoingOn/Frontend/Frontend.csproj
+++ b/GoingOn/Frontend/Frontend.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Authentication\BasicAuthenticationAttribute.cs" />
     <Compile Include="Authentication\HttpAuthenticationChallengeContextExtensions.cs" />
     <Compile Include="Authentication\IdentityBasicAuthenticationAttribute.cs" />
+    <Compile Include="Common\ApiUriBuilder.cs" />
     <Compile Include="Common\BusinessValidationException.cs" />
     <Compile Include="Common\InputValidationException.cs" />
     <Compile Include="Controllers\INewsController.cs" />
