--- a/GoingOn/Frontend.Tests/packages.config
+++ b/GoingOn/Frontend.Tests/packages.config
@@ -1,24 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package newsId="CommonServiceLocator" version="1.3" targetFramework="net45" />
-  <package newsId="HttpClientExtensions" version="1.0.2" targetFramework="net45" />
-  <package newsId="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
-  <package newsId="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
-  <package newsId="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net45" />
-  <package newsId="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
-  <package newsId="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
-  <package newsId="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
-  <package newsId="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
-  <package newsId="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
-  <package newsId="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
-  <package newsId="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
-  <package newsId="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
-  <package newsId="Microsoft.Owin.Security" version="3.0.0" targetFramework="net45" />
-  <package newsId="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package newsId="Moq" version="4.2.1409.1722" targetFramework="net45" />
-  <package newsId="Newtonsoft.Json" version="6.0.7" targetFramework="net45" />
-  <package newsId="Owin" version="1.0" targetFramework="net45" />
-  <package newsId="RhinoMocks" version="3.6.1" targetFramework="net45" />
-  <package newsId="System.Web.Mvc.Extensions.Mvc.4" version="1.0.9" targetFramework="net45" />
-  <package newsId="WebApiContrib.Testing" version="0.7.18.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
 </packages>
