--- a/GoingOn/Common/Common.csproj
+++ b/GoingOn/Common/Common.csproj
@@ -46,6 +46,9 @@
     <Compile Include="GOUriBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
