--- a/GoingOn/FrontendWebRole/FrontendWebRole.csproj
+++ b/GoingOn/FrontendWebRole/FrontendWebRole.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\GoingOnApiController.cs" />
     <Compile Include="Controllers\HotNewsController.cs" />
     <Compile Include="Controllers\NewsImageController.cs" />
     <Compile Include="DependencyInjection\UnityFilterProvider.cs" />
