--- a/GoingOn/FrontendWebRole/FrontendWebRole.csproj
+++ b/GoingOn/FrontendWebRole/FrontendWebRole.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Controllers\GoingOnApiController.cs" />
     <Compile Include="Controllers\HotNewsController.cs" />
     <Compile Include="Controllers\NewsImageController.cs" />
+    <Compile Include="Controllers\NewsThumbnailImageController.cs" />
     <Compile Include="DependencyInjection\UnityFilterProvider.cs" />
     <Compile Include="DependencyInjection\UnityResolver.cs" />
     <Compile Include="Global.asax.cs">
