--- a/GoingOn/Frontend/Frontend.csproj
+++ b/GoingOn/Frontend/Frontend.csproj
@@ -163,7 +163,7 @@
       <Project>{87DE0C26-CC33-4111-9756-5543ACB4CC9B}</Project>
       <Name>Repository</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Storage\XStoreProxy.csproj">
+    <ProjectReference Include="..\XStoreProxy\XStoreProxy.csproj">
       <Project>{90E34909-07F8-4EAC-BF0E-285474BFD909}</Project>
       <Name>XStoreProxy</Name>
     </ProjectReference>
