--- a/GoingOn/FrontendWebRole/FrontendWebRole.csproj
+++ b/GoingOn/FrontendWebRole/FrontendWebRole.csproj
@@ -231,8 +231,8 @@
       <Project>{87DE0C26-CC33-4111-9756-5543ACB4CC9B}</Project>
       <Name>Repository</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Storage\XStoreProxy.csproj">
-      <Project>{90e34909-07f8-4eac-bf0e-285474bfd909}</Project>
+    <ProjectReference Include="..\XStoreProxy\XStoreProxy.csproj">
+      <Project>{90E34909-07F8-4EAC-BF0E-285474BFD909}</Project>
       <Name>XStoreProxy</Name>
     </ProjectReference>
   </ItemGroup>
