--- a/GoingOn/Repository/Repository.csproj
+++ b/GoingOn/Repository/Repository.csproj
@@ -57,7 +57,7 @@
       <Project>{73D68FF8-7F66-426F-8320-89BC224D3B09}</Project>
       <Name>Model</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Storage\XStoreProxy.csproj">
+    <ProjectReference Include="..\XStoreProxy\XStoreProxy.csproj">
       <Project>{90E34909-07F8-4EAC-BF0E-285474BFD909}</Project>
       <Name>XStoreProxy</Name>
     </ProjectReference>
